fix social icons and parallax header on mobile

--- a/sass/pages/_single-custom.scss
+++ b/sass/pages/_single-custom.scss
@@ -23,8 +23,12 @@ section.page-title {
   background-size: 168% !important;
 }
 
-.single {
+.single,
+.blog {
   .logo-header { display: none; }
+}
+
+.single {
   section.hentry { padding: 0 !important; }
   .text-center h3 { text-align: left; }
   > section {
